feat: Add to index.html about my infomation.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
   <body>
 	<h1>Home</h1>
 	<p>This is home.</p>
+
+	<pre>
+	  안녕하세요.
+	  저는 카카오의 프론트엔드 개발자가 되고싶은 정다솔입니다.
+          현재 제 꿈을 이루기 위해 열심히 배우고 있습니다.
+	  더더욱 성장하는 모습을 보여드리겠습니다.
+	  수업을 들으면 들을수록... 제가 컴퓨터를 전공했다고
+	  말하기 부끄러워지네요....
+	  저는 아직은 그냥 말하는 감자입니다.....
+	  많이 배워가도록 하겠습니다.
+	</pre>
   <script src="./hello.js"></script>	
   </body>
 
